lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-service
spec:
  type: LoadBalancer
  selector:
    app: dms-general
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8008
