deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: dms-general
  name: dms-general
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dms-general
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/general-master-py-latest-default: "true"
        io.kompose.service: dms-general
    spec:
      containers:
        - args:
            - bash
            - -c
            - cd app && uvicorn main:app --host 0.0.0.0
          image: richardoalvin/general-service:v1.0
          name: dms-general
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: dms-general-claim0
      restartPolicy: IfNotPresent
      volumes:
        - name: dms-general-claim0
          persistentVolumeClaim:
            claimName: dms-general-claim0
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: dms-general
  name: dms-general
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: dms-general
status:
  loadBalancer: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: general-master-py-latest-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/general-master-py-latest-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/general-master-py-latest-default: "true"
