general-master-py-latest-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: general-master-py-latest-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/general-master-py-latest-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/general-master-py-latest-default: "true"
